# liveplot

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  dev-readme.md  pyproject.toml  sample.py  tox.ini
demo/: example.py  example_1.py
docs_src/: .gitignore  conf.py  index.rst  internals.rst  make.bat
requirements/: dev.txt
src/liveplot/: __main__.py  cli.py  code_loader.py  demo_utils.py  module_loader.py  plot_watcher.py  plt_interface.py  quick_guide.md  template.py
tests/: conftest.py
tests/integration/: test_logging.py  test_module_loader.py  test_new_template.py  test_plot_watcher.py  test_plt_interface.py  test_template.py
tests/integration/filesystem/: test_module_loader.py  test_plot_watcher.py
tests/unit/: test_codeloader.py  test_helpers.py  test_module_loader_helpers.py  test_parser.py  test_plot_watcher_flow.py
