[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liveplot"
version = "0.1.0"
authors = [
    { name = "Frederik Kunstner", email = "frederik.kunstner@gmail.com" },
]
description = "A utility to update matplotlib plots live on save"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Framework :: Matplotlib"
]
dependencies = [
    "matplotlib",
    "numpy",
    "typing_extensions",
]


[project.scripts]
liveplot = "liveplot.cli:main"


[project.urls]
"Homepage" = "https://github.com/fkunstner/liveplot"
"Source" = "https://github.com/fkunstner/liveplot"
"Bug Tracker" = "https://github.com/fKunstner/liveplot/issues"




[tool.black]
line-length = 88


[tool.isort]
profile = "black"


[tool.docformatter]
wrap-descriptions = 81


[tool.pylint]
ignore-paths = ["src/liveplot/template.py"]

[tool.pylint.messages_control]
disable = "W1203, W1201, C0303"
docstring-min-length = 2

[tool.pylint.format]
max-line-length = "88"
good-names = ["f"]


[tool.pytest.ini_options]
addopts = "--cov=liveplot"
testpaths = ["tests"]


[tool.mypy]
mypy_path = "src"
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
]
ignore_missing_imports = true